--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="container">
         <aside class="sidebar">
             <nav>
-                <h1><a href="index.html" style="color: white; text-decoration: none;">My Website</a></h1>
+                <h1><a href="index.html" style="color: white; text-decoration: none;">The Brik Wall</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="articles.html">Articles</a></li>
@@ -24,15 +24,14 @@
 
         <main class="main-content">
             <section>
-                <h2>Contact</h2>
+                <img src="images/contact.gif">
                 <p>Please use the contact methods below carefully. I am prone to not forgetting to respond.</p>
 
                 <h3>Email</h3>
                 <p>For general platitudes and regards:</p>
                 <p><strong>loweryan168@yahoo.com</strong></p>
 
-                <h3>Topics I Enjoy</h3>
-                <p>Reach out about:</p>
+                <h3>Reach out about:</h3>
                 <ul>
                     <li>Criticism of Capitalism</li>
                     <li>Stroking my ego</li>
@@ -40,8 +39,9 @@
                     <li>Similarly minded people</li>
                     <li>Feedback on my articles</li>
                 </ul>
-
-                <p>Slop no-no list:</p>
+                <br>
+                <br>
+                <h3>Slop no-no list:</h3>
                 <ul>
                     <li>Ethics of AI</li>
                     <li>Violent Revolution</li>
@@ -55,8 +55,8 @@
     </div>
 
     <footer>
-        <p>2025. No rights reserved. Go ahead, take my words and website, it's even open source
-            (https://github.com/Cheesy-Brik/the-brik-wall.github.io)</p>
+        <p>2025. No rights reserved. Go ahead, take my words and website, it's even <a
+                href="https://github.com/Cheesy-Brik/the-brik-wall.github.io">open source</a></p>
     </footer>
 
     <script src="script.js"></script>
