--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <main class="main-content">
             <section>
-                <h2>Welcome</h2>
+                <img src="images/welcome.gif">
                 <p>Welcome to the Brik Wall, the site that exists purely so I (Cheesy Brik) can plaster my
                     writings/ideas somwhere.</p>
 
@@ -45,8 +45,8 @@
     </div>
 
     <footer>
-        <p>2025. No rights reserved. Go ahead, take my words and website, it's even open source
-            (https://github.com/Cheesy-Brik/the-brik-wall.github.io)</p>
+        <p>2025. No rights reserved. Go ahead, take my words and website, it's even <a
+                href="https://github.com/Cheesy-Brik/the-brik-wall.github.io">open source</a></p>
     </footer>
 
     <script src="script.js"></script>
