--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - My GitHub Pages Site</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <div class="container">
         <aside class="sidebar">
             <nav>
-                <h1><a href="index.html" style="color: white; text-decoration: none;">My Website</a></h1>
+                <h1><a href="index.html" style="color: white; text-decoration: none;">The Brik Wall</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="articles.html">Articles</a></li>
@@ -24,11 +24,9 @@
 
         <main class="main-content">
             <section>
-                <h2>About</h2>
+                <img src="images/about.gif">
                 <p>Not done
                 <p>
-
-                <h3>My Background</h3>
 
                 <h3>Get In Touch</h3>
                 <p>I am starved of human contact and would love to be overloaded with social interaction. Please feel
@@ -40,7 +38,8 @@
     </div>
 
     <footer>
-        <p>2025. No rights reserved. Go ahead, take my words and website, it's even open source (https://github.com/Cheesy-Brik/the-brik-wall.github.io)</p>
+        <p>2025. No rights reserved. Go ahead, take my words and website, it's even <a
+                href="https://github.com/Cheesy-Brik/the-brik-wall.github.io">open source</a></p>
     </footer>
 
     <script src="script.js"></script>
