--- a/articles.html
+++ b/articles.html
@@ -12,7 +12,7 @@
     <div class="container">
         <aside class="sidebar">
             <nav>
-                <h1><a href="index.html" style="color: white; text-decoration: none;">My Website</a></h1>
+                <h1><a href="index.html" style="color: white; text-decoration: none;">The Brik Wall</a></h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="articles.html" class="active">Articles</a></li>
@@ -24,7 +24,7 @@
 
         <main class="main-content">
             <section>
-                <h2>Articles</h2>
+                <img src="images/articles.gif">
                 <div id="articles-list">
                     Loading articles...
                 </div>
@@ -33,8 +33,8 @@
     </div>
 
     <footer>
-        <p>2025. No rights reserved. Go ahead, take my words and website, it's even open source
-            (https://github.com/Cheesy-Brik/the-brik-wall.github.io)</p>
+        <p>2025. No rights reserved. Go ahead, take my words and website, it's even <a
+                href="https://github.com/Cheesy-Brik/the-brik-wall.github.io">open source</a></p>
     </footer>
 
     <script src="script.js"></script>
